<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ImageMatch</string>
    <string name="action_settings">Settings</string>
    <string name="help">Click the duplicate images</string>
    <string name="misses">Misses:</string>
    <string name="scramble">Scramble</string>
    <string name="matches">Matches:</string>
    <string name="about">About</string>
    <string name="rotate">Rotate</string>
    <string name="zero">Zero</string>
    <string name="instructions">The goal of the game is to click the two matching images while making the least amount of mistakes possible.</string>
    <string name="duplicate_toast">Find the other duplicate.</string>
    <string name="credits">Created by:</string>
    <string name="author1">Julien Comtois</string>
    <string name="author2">Joey Campanelli</string>
    <string name="author3">Frank Birikundavyi</string>
    <string name="title_activity_about">About</string>
    <string name="howtoplay">How to play:</string>
    <string name="totalmatches">Total matches:</string>
    <string name="totalmisses">Total Misses:</string>
    <string name="matchesctr">0</string>
    <string name="missesctr">0</string>
    <string name="totalmatchesctr">0</string>
    <string name="totalmissesctr">0</string>
    <string name="windialog">You win! Click scramble to play again.</string>
    <string name="losetoast">No match, try again!</string>
    <string name="dupefound">Find the other duplicate.</string>
    <string name="windialogtitle">You win!</string>
    <string name="winpositivebtn">Ok!</string>

</resources>
